additional VM args for Java11+ runtime compatibility